feature: integrated config manager with api configuration.
